# fastapi-uuid-server-AS

./: Dockerfile
app/: README.md  main.py  pyproject.toml
