[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Amunkshawarn",email = "ashawarn08@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "uvicorn (>=0.34.0,<0.35.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "requests (>=2.32.3,<3.0.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.poetry]
packages = [{include = "app"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
